--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ python:
 before_install:
     - sudo locale-gen 'cs_CZ.UTF-8'
 install:
+    - "pip install sphinx"
     - "python setup.py install"
 script:
     - "python setup.py test"
+    - "python setup.py build_sphinx"
