--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ before_install:
     - sudo locale-gen 'cs_CZ.UTF-8'
 install:
     - "pip install sphinx"
+    - "pip install PyPDF2"
     - "python setup.py install"
 script:
     - "python setup.py test"
