some code pollishing with flake8, set its's configuration in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,3 +2,8 @@
 source-dir = doc/source
 build-dir = doc/build
 all_files = 1
+
+[flake8]
+max-line-length = 180
+exclude = env/*,*/migrations/*,*/static/*,doc/*
+max-complexity = 10
