--- a/setup.cfg
+++ b/setup.cfg
@@ -7,3 +7,4 @@ all_files = 1
 max-line-length = 180
 exclude = env/*,*/migrations/*,*/static/*,doc/*
 max-complexity = 10
+enable-extensions = import-order, blind-except, comprehensions, tidy-imports
