add bumpversion config

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,11 @@
+[bumpversion]
+current_version = 0.5.4
+commit = True
+tag = True
+
+[bumpversion:file:InvoiceGenerator/__init__.py]
+serialize = ({major}, {minor}, {patch})
+
 [build_sphinx]
 source-dir = doc/source
 build-dir = doc/build
