Enchancement: exclude .build from flake8

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,7 +13,7 @@ all_files = 1
 
 [flake8]
 max-line-length = 180
-exclude = env/*,*/migrations/*,*/static/*,doc/*,.eggs
+exclude = env/*,*/migrations/*,*/static/*,doc/*,.eggs,.build
 max-complexity = 10
 enable-extensions = import-order, blind-except, comprehensions, tidy-imports
 
