fixes for zest.releaser

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,8 @@
-[bumpversion]
+[zest.releaser]
+python-file-with-version = InvoiceGenerator/__init__.py
 current_version = 1.1.0
 commit = True
 tag = True
-
-[bumpversion:file:InvoiceGenerator/__init__.py]
-serialize = ({major}, {minor}, {patch})
 
 [build_sphinx]
 source-dir = doc/source
